--- a/Game/styleQ3.css
+++ b/Game/styleQ3.css
@@ -41,6 +41,7 @@ img{
     cursor: pointer;
     width: 197.2px;
     height: 71.3px;
+    margin-bottom: 10px;
 }
 .submit:hover{
     background-color: rgb(221, 220, 220);
