--- a/Game/styleplayButton.css
+++ b/Game/styleplayButton.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("./playBackground.png");
+    background-image: url("./Assets/playBackground.png");
     background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
