--- a/Game/styleQ2.css
+++ b/Game/styleQ2.css
@@ -39,6 +39,7 @@ img{
     cursor: pointer;
     width: 12.5rem;
     height: 4.5rem;
+    margin-bottom: 10px;
 }
 .submit:hover{
     background-color: rgb(221, 220, 220);
