--- a/Game/styleQ4.css
+++ b/Game/styleQ4.css
@@ -38,6 +38,7 @@ h1{
     cursor: pointer;
     width: 197.2px;
     height: 71.3px;
+    margin-bottom: 10px;
 }
 .submit:hover{
     background-color: rgb(221, 220, 220);
