--- a/Game/styleQ3.css
+++ b/Game/styleQ3.css
@@ -6,7 +6,7 @@ body{
 h1{
     margin-left: 30px;
     text-align: left;
-    font-size: 50px;
+    
 }
 img{
     margin-top: 100px;
@@ -31,7 +31,7 @@ img{
     border: 3px solid #333;
 }
 .submit{
-    margin-top: 200px;
+    margin-top: 50px;
     margin-right: 50px;
     align-items: flex-end;
     font-size: 30px;
@@ -48,4 +48,18 @@ img{
 }
 button{
     float: right;
+}
+#container{
+    display:flex;
+    gap: 25%;
+    
+}
+#timer{
+    font-size: xx-large;
+    border: 2px solid black;
+    background-color: white;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 10px;
+    border-radius: 10px;
 }
