--- a/Game/styleQ4.css
+++ b/Game/styleQ4.css
@@ -9,7 +9,7 @@
 h1{
     text-align: left;
     margin-left: 40px;
-    font-size: 40px;
+    
 }
 .choices{
     display: flex;
@@ -45,4 +45,22 @@ h1{
 }
 button{
     float: right;
+}
+
+#container{
+    display:flex;
+    gap:23%;
+    height: 50px;
+}
+#timer{
+    font-size: xx-large;
+    border: 2px solid black;
+    background-color: white;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 10px;
+    border-radius: 10px;
+}
+.heading{
+    flex-basis:500px;
 }
