--- a/Game/styleQ5.css
+++ b/Game/styleQ5.css
@@ -17,7 +17,7 @@ body {
 h1 {
     text-align: left;
     margin-top: 50px;
-    font-size: 40px;
+    
 }
 
 .game p {
@@ -70,4 +70,18 @@ h1 {
 
 button {
     float: right;
+}
+#container{
+    display:flex;
+    gap:27%;
+    
+}
+#timer{
+    font-size: xx-large;
+    border: 2px solid black;
+    background-color: white;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 10px;
+    border-radius: 10px;
 }
