--- a/ReactGame/src/styles1.css
+++ b/ReactGame/src/styles1.css
@@ -149,6 +149,7 @@ html, body {
     height: 100vh;
     background-image: url('./Assets/playBackground.png');
     background-size: cover;
+    background-position: center;
 }
 
 .playButton button {
@@ -183,6 +184,7 @@ html, body {
     width: 50px;
     height: 50px;
 }
+
 
 #image:hover {
     border: 2px solid black;
