--- a/ReactGame/src/styles1.css
+++ b/ReactGame/src/styles1.css
@@ -209,7 +209,7 @@ html, body {
     display: flex;
     align-items: center;
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 .SkillImage{
     margin-top: 2%;
@@ -224,12 +224,14 @@ h1 {
 }
 
 .game p {
+    margin: 0%;
     font-size: 40px;
 }
 .questionImg {
     margin-bottom: 0%;
     margin: 0;
     padding: 0;
+    height: 250px;
 }
 .choices {
     display: flex;
@@ -245,7 +247,7 @@ h1 {
     border-radius: 3rem;
     border: 0.1rem solid #333;
     background-color: rgb(255, 255, 255);
-    width: 128px;
+    width: 115px;
     cursor: pointer;
 }
 
@@ -257,7 +259,7 @@ h1 {
     display: flex;
     justify-content: center;
     gap: 4%;
-    margin: 25px 0;
+    /* margin: 0; */
 }
 /* img{
     border: 3px solid black;
@@ -401,12 +403,12 @@ h1 {
       background-color: #007BB5;
   }
   /* Media Queries */
-    @media (max-width: 768px) {
+    /* @media (max-width: 768px) {
         .choices {
             flex-direction: column;
             gap: 10px;
         }
-    }
+    } */
 
 
  
