--- a/ReactGame/src/styles1.css
+++ b/ReactGame/src/styles1.css
@@ -4,7 +4,7 @@ html, body {
     margin: 0;
     padding: 0;
     background-color: #D5BDA9;
-    background-image: url("./Assets/BackgroundImage.jpg");
+    background-image: url("./Assets/BackgroundImage.jpg"); 
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -153,8 +153,10 @@ html, body {
     justify-content: center;
     align-items: center;
     height: 100vh;  /* Full height to ensure vertical centering */
-    background-image: url('./Assets/playBackground.png');
+    background-image: url('./Assets/playbackground1.jpeg');
     background-size: cover;
+   
+    background-repeat: no-repeat;
     flex-direction: column;
     margin-top: 0%;
     overflow: hidden; /* Prevent scrolling */
@@ -417,6 +419,72 @@ h1 {
             gap: 10px;
         }
     } */
+     /* Container for the navbar menu */
+.navbar {
+    position: fixed;
+    top: 0;
+    left: -250px; /* Position off-screen initially */
+    width: 200px;
+    height: 100%;
+    background-color: rgb(255, 247, 247);
+    padding-top: 60px;
+    transition: left 0.3s ease; /* Smooth slide effect */
+    z-index: 1000; /* Ensures the navbar is on top */
+  }
+  
+  /* Show navbar when 'visible' class is added */
+  .navbar.visible {
+    left: 0; /* Slide in from the left */
+  }
+  
+  /* Styling for the navbar links */
+  .navbar ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .navbar li {
+    color: white; 
+    padding: 15px;
+    cursor: pointer;
+  }
+  
+  /* Hamburger button styling */
+  .hamburger {
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+    background: none;
+    border: none;
+    color: #333;
+    position: absolute;
+    top: 10px;
+    left: 5px;
+    z-index: 1001; /* Ensure it stays above the navbar */
+  }
+  .nav-item {
+    display: flex;
+    align-items: center;
+}
+
+.icon {
+    width: 50px;
+    height: 50px;
+}
+
+.nav-text {
+    margin-left: 8px;
+    font-size: 24px;
+    color: #333;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.nav-text:hover {
+    color: #007bff; /* Optional hover effect for button text */
+}
+
 
 
  
