--- a/ReactGame/src/styles1.css
+++ b/ReactGame/src/styles1.css
@@ -46,7 +46,7 @@ html, body {
 
 #loginPage {
     width: 350px;
-    height: 500px;
+    height: 470px;
     padding: 40px;
     background-color: rgba(255, 255, 255, 0.9);
     border: 1px solid grey;
@@ -59,11 +59,11 @@ html, body {
     font-size: 30px;
     text-align: center;
     justify-content: center;
-    margin-top: 25px;
+    /* margin-top: 25px; */
 }
 
 .input-box {
-    margin-top: 50px;
+    margin-top: 40px;
     margin-left: 70px;
     margin-right: 70px;
 }
@@ -155,8 +155,6 @@ html, body {
     height: 100vh;  /* Full height to ensure vertical centering */
     background-image: url('./Assets/playbackground1.jpeg');
     background-size: cover;
-   
-    background-repeat: no-repeat;
     flex-direction: column;
     margin-top: 0%;
     overflow: hidden; /* Prevent scrolling */
@@ -426,7 +424,7 @@ h1 {
     left: -250px; /* Position off-screen initially */
     width: 200px;
     height: 100%;
-    background-color: rgb(255, 247, 247);
+    background-color: white;
     padding-top: 60px;
     transition: left 0.3s ease; /* Smooth slide effect */
     z-index: 1000; /* Ensures the navbar is on top */
@@ -451,8 +449,7 @@ h1 {
   
   /* Hamburger button styling */
   .hamburger {
-    font-size: 40px;
-    font-weight: bold;
+    font-size: 30px;
     cursor: pointer;
     background: none;
     border: none;
@@ -484,7 +481,3 @@ h1 {
 .nav-text:hover {
     color: #007bff; /* Optional hover effect for button text */
 }
-
-
-
- 
