--- a/ReactGame/src/styles1.css
+++ b/ReactGame/src/styles1.css
@@ -4,7 +4,7 @@ html, body {
     margin: 0;
     padding: 0;
     background-color: #D5BDA9;
-    background-image: url("./Assets/BackgroundImage.jpg"); 
+    background-image: url("./Assets/Background1.png"); 
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -153,7 +153,7 @@ html, body {
     justify-content: center;
     align-items: center;
     height: 100vh;  /* Full height to ensure vertical centering */
-    background-image: url('./Assets/playbackground1.jpeg');
+    background-image: url('./Assets/PlayBackground2.png');
     background-size: cover;
     flex-direction: column;
     margin-top: 0%;
@@ -449,7 +449,7 @@ h1 {
   
   /* Hamburger button styling */
   .hamburger {
-    font-size: 30px;
+    font-size: 40px;
     cursor: pointer;
     background: none;
     border: none;
@@ -462,6 +462,8 @@ h1 {
   .nav-item {
     display: flex;
     align-items: center;
+    border: solid black 2px;
+    border-radius: 5px;
 }
 
 .icon {
@@ -476,8 +478,9 @@ h1 {
     background: none;
     border: none;
     cursor: pointer;
+    border-left-color: #333;
 }
-
-.nav-text:hover {
-    color: #007bff; /* Optional hover effect for button text */
+.nav-item:hover{
+    transform: scale(1.05);         /* Slightly increases size on hover */
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3); /* Adds shadow on hover */
 }
