--- a/ReactGame/src/styles1.css
+++ b/ReactGame/src/styles1.css
@@ -421,8 +421,8 @@ h1 {
 .navbar {
     position: fixed;
     top: 0;
-    left: -250px; /* Position off-screen initially */
-    width: 200px;
+    left: -350px; /* Position off-screen initially */
+    width: 300px;
     height: 100%;
     background-color: white;
     padding-top: 60px;
@@ -450,14 +450,20 @@ h1 {
   /* Hamburger button styling */
   .hamburger {
     font-size: 40px;
+    flex-direction: column;
+    font-weight: bold;
     cursor: pointer;
     background: none;
     border: none;
     color: #333;
     position: absolute;
-    top: 10px;
-    left: 5px;
+    top: 7px;
+    left: 7px;
     z-index: 1001; /* Ensure it stays above the navbar */
+  }
+  .hamburger:hover{
+    transform: scale(1.07);         /* Slightly increases size on hover */
+    text-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3); /* Adds shadow on hover */
   }
   .nav-item {
     display: flex;
